--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="mask-icon" href="/static/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="/static/favicon/favicon.ico">
     <meta name="msapplication-config" content="/static/favicon/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="white">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="Description" content="Install and configure peatio on your Amazon AWS or Google Cloud account, monitoring and incident management.">
     <meta name="Keywords" content="peatio, bitcoin, exchange, marketplace, ethereum, litecoin, crypto-currency, blockchain platform">
